# DAO-smart-comtract-Solidity

./: .gitignore  README.md  package.json
apps/daos/: bos.config.json
apps/daos/widget/daos/: App.jsonc  App.jsx  Config.jsx
apps/daos/widget/daos/Components/: Circles.jsx  Clipboard.jsx  Comment.jsx  Comments.jsx  Communities.jsx  CommunityImage.jsx  CreateReply.jsx  DaosByVertical.jsx  Description.jsx  FileUploader.jsx  Footer.jsx  Form.jsx  Item.jsx  MarkdownEditor.jsx  MarkdownViewer.jsx  NavBar.jsx  RunnerContainer.jsx  Title.jsx  TopNavBar.jsx
apps/daos/widget/daos/Layouts/: App.jsx
apps/daos/widget/daos/Pages/: Dao.jsx  Home.jsx
apps/mdao/: bos.config.json
apps/mdao/widget/MDAO/: App.jsx  Config.jsx
apps/mdao/widget/MDAO/Components/: CreateReply.jsx  FileUploader.jsx  Footer.jsx  Form.jsx  Hero.jsx  Item.jsx  NavBar.jsx  ReplyItem.jsx  Switch.jsx
apps/mdao/widget/MDAO/Layouts/: App.jsx
apps/mdao/widget/MDAO/Pages/: Achievements.jsx  Comment.jsx  Communities.jsx  Councils.jsx  Guidance.jsx  Home.jsx  Info.jsx
contracts/: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh  deploy-mainnet.sh  deploy-testnet.sh
contracts/src/: lib.rs  notify.rs  social_db.rs  storage_keys.rs
contracts/src/access_control/: mod.rs  owners.rs  rules.rs
contracts/src/community/: mod.rs
contracts/src/dao/: mod.rs
contracts/src/migrations/: migrate_to_v2.rs  mod.rs
contracts/src/post/: comment.rs  like.rs  mod.rs  proposal.rs  report.rs
contracts/src/user/: mod.rs
contracts/tests/: README.md  test_env.rs
(+13 files in other folders)
