[package]
name = "mdao"
version = "0.0.1"
authors = ["Mr. Vlodkow"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.0.0"
near-contract-standards = "5.0.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = "1.0.196"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["full"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
near-workspaces = { version = "0.10.0", features = ["unstable"], default-features = false  }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
